# gaming-roulette

./: .eslintrc  .eslintrc.cjs  bun.lockb  components.json  eslint.config.mjs  package-lock.json  package.json  played.md  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml  validate.yml
app/: .eslintrc  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.svelte  App.tsx  globals.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
src/: App.svelte  BrowserContainer.tsx  TauriContainer.tsx  globals.css  index.css  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: Layout.tsx  Providers.tsx  index.tsx
src/components/: ColorPicker.tsx  Confirmation.tsx  CopyClick.tsx  DateInput.tsx  ErrorBoundary.tsx  FileInput.tsx  Icon.tsx  IconButton.tsx  IdleIndicator.tsx  InfoHint.tsx  InputLabel.tsx  Link.tsx  Loading.tsx  LoadingData.tsx  Modal.tsx  Navigation.tsx  NoData.tsx  NumberInput.tsx  Portal.tsx  Select.tsx  Steps.tsx  Swatch.tsx  Table.tsx  Tabs.tsx  TitleTooltip.tsx  Toaster.tsx  WindowTitlebar.tsx
src/data/: audioSettings.ts  externalGames.ts  games.ts  gamesExternal.ts  github.ts  handicap.ts  players.ts  ruleset.ts  settings.ts  window.ts
src/hooks/: useEventListener.ts  useHashRouter.ts  useIdle.ts  useMouseIdle.ts  useSize.ts  useTransition.ts  useWindowFocus.tsx
src/lib/: Button.svelte  Icon.svelte  TextArea.svelte  yaasl.ts
src/pages/: Pages.tsx  Router.tsx  routes.ts
src/types/: BaseProps.ts  routes.ts
src/utils/: array.ts  colors.ts  createId.ts  (+9 more)
(+179 files in other folders)
