[package]
name = "gaming-roulette"
version = "0.0.0"
description = "Pick random games to play"
authors = ["PrettyCoffee"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.5.6", features = [] }

[dependencies]
tauri = { version = "=1.8.3", features = [ "window-unmaximize", "window-start-dragging", "window-maximize", "window-close", "window-minimize", "window-unminimize", "shell-open"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
